@@ -38,13 +38,16 @@ public class WebSecurityConfig {
   @Bean
   public SecurityFilterChain filterChain(HttpSecurity http,
       UserIdThreadContextFilter userIdThreadContextFilter) throws Exception {
-    http.securityMatcher("/api/**").cors(cors -> cors.configurationSource(request -> {
-      CorsConfiguration conf = new CorsConfiguration();
-      conf.setAllowCredentials(true);
-      conf.setAllowedOrigins(Arrays.asList(allowedOrigins));
-      conf.setAllowedMethods(List.of("GET", "HEAD", "POST", "PUT", "DELETE", "OPTIONS"));
-      conf.setAllowedHeaders(List.of("*"));
-      return conf;
+    http
+      .securityMatcher("/api/**")
+      .csrf(csrf -> csrf.ignoringRequestMatchers("/api/**"))
+      .cors(cors -> cors.configurationSource(request -> {
+        CorsConfiguration conf = new CorsConfiguration();
+        conf.setAllowCredentials(true);
+        conf.setAllowedOrigins(Arrays.asList(allowedOrigins));
+        conf.setAllowedMethods(List.of("GET", "HEAD", "POST", "PUT", "DELETE", "OPTIONS"));
+        conf.setAllowedHeaders(List.of("*"));
+        return conf;
     })).oauth2ResourceServer(oauth2 -> oauth2.jwt(Customizer.withDefaults()))
         .addFilterAfter(userIdThreadContextFilter, AuthorizationFilter.class);
     return http.build();
